Created all the files and folder according to the proejct structure

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,11 @@ __marimo__/
 
 
 assets/design.txt
+*.pyc
+__pycache__/
+.env
+*.db
+venv/
+.vscode/
+static/uploads/*
+!static/uploads/.gitkeep
