--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==3.0.0
+flask-cors==4.0.0
 firebase-admin==6.3.0
 python-dotenv==1.0.0
-Werkzeug==3.0.1
-pysqlite3-binary==0.5.2
+requests==2.31.0
+Pillow==10.1.0
